--- a/back/package.json
+++ b/back/package.json
@@ -5,6 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
+    "build":"cd ../front && npm run build",
+    "install-client":"cd ../front && npm install",
+    "client":"cd ../front && npm start",
     "heroku-postbuild":"cd ../front && npm install && npm run build"
   },
   "author": "Maci",
