--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DATABASE_ACCESS = "mongodb+srv://Martin:finki21@cluster0.bzvbz.mongodb.net/macedonia?retryWrites=true&w=majority",
-PORT = "4000"
+DATABASE_ACCESS = "mongodb+srv://Martin:finki21@cluster0.bzvbz.mongodb.net/macedonia?retryWrites=true&w=majority"
