--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "build":"cd /front && npm run build",
-    "install-client":"cd ../front && npm install",
-    "client":"cd /front && npm start",
-    "heroku-postbuild":"cd /front && npm install && npm run build"
+    "heroku-postbuild":"cd front && npm install && npm run build"
   },
   "author": "Maci",
   "license": "ISC",
