--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "Application",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "heroku-postbuild":"cd front && npm install && npm run build"
+    "build": "cd front && npm run build",
+    "install-client": "cd front && npm install",
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "start": "concurrently -n 'server,client' -c 'red,green'  \"nodemon server.js\" \"npm run client\"",
+    "client": "cd front && npm start",
+    "dev": "concurrently -n 'server,client' -c 'red,green'  \"nodemon server.js\" \"npm run client\""
   },
   "author": "Maci",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
