--- a/package.json
+++ b/package.json
@@ -25,6 +25,17 @@
     "mongoimport": "^1.0.6",
     "mongoose": "^5.11.14",
     "mongosm": "0.0.5",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "@syncfusion/ej2-react-maps": "^18.4.39",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.2",
+    "axios": "^0.21.1",
+    "leaflet": "^1.7.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0",
+    "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4"
   }
 }
