--- a/package.json
+++ b/package.json
@@ -1,43 +1,45 @@
 {
-  "name": "y",
-  "version": "1.0.0",
-  "description": "Application",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd front && npm run build",
-    "install-client": "cd front && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
-    "start": "nodemon server.js && npm run client",
-    "client": "cd front && npm start",
-    "dev": "concurrently -n 'server,client' -c 'red,green'  \"nodemon server.js\" \"npm run client\""
-  },
-  "cacheDirectories": [
-    "node_modules",
-    "front/react"
-  ],
-  "author": "Maci",
-  "license": "ISC",
+  "name": "front",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bootstrap": "^4.6.0",
-    "concurrently": "^5.3.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoimport": "^1.0.6",
-    "mongoose": "^5.11.14",
-    "mongosm": "0.0.5",
-    "nodemon": "^2.0.7",
     "@syncfusion/ej2-react-maps": "^18.4.39",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "concurrently": "^5.3.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
+  },
+  "scripts": {
+  "start-client": "react-scripts start",
+  "build": "react-scripts build && (cd back && npm install)",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "start": "cd back && npm start"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
