--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoimport": "^1.0.6",
+    "mongoose": "^5.11.14",
+    "mongosm": "0.0.5",
+    "nodemon": "^2.0.7",
     "@syncfusion/ej2-react-maps": "^18.4.39",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "concurrently": "^5.3.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
