--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-  "start-client": "react-scripts start",
+  "start-client": "react-scripts start && (cd back && npm install)",
   "build": "react-scripts build && (cd back && npm install)",
   "test": "react-scripts test",
   "eject": "react-scripts eject",
@@ -36,7 +36,7 @@
       "react-app/jest"
     ]
   },
-  "proxy":"http://localhost:4000/",
+  "proxy":"https://finki-final-app.herokuapp.com/",
   "browserslist": {
     "production": [
       ">0.2%",
